--- a/index.html
+++ b/index.html
@@ -7,13 +7,21 @@
 <meta name="description" content="Welcome to my website that showcases some of my digital creations.">
 </head>
 <body>
-    <h1> Welcome </h1>
-    <h2> Mary Smith </h2>
-
+    <main>
+        <nav>  </nav>
+    <header>
+    <h1> Hi, I am Web Designer Temuulen Batsaikhan </h1></header>
+    <section> </section>
+</main>
+    <h2> Web UI/Designer </h2>
+    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae dolorum qui vero nesciunt officiis, velit praesentium repellendus! Nihil assumenda odit veritatis optio et. Eius praesentium, ut dolor perferendis error nobis?</p>
+    <p> I created this website to showcase this buh</p>
     <h3> Sample Web pages</h3>
 
     <p><a href="exercise/page-1.html">A Tale of Two Cities</a></p>
-
-
+    <p><a href="exercise/page-2.html">Purple rain</a></p>
+    <p><a href="exercise/page-3.html">What is this?</a></p>
+<!-- Do not read this -->
+    <footer>   </footer>
 </body>
 </html>
