--- a/exercise/page-1.html
+++ b/exercise/page-1.html
@@ -6,6 +6,7 @@
     <title>A tale of Two Cities</title>
     <meta name="description" content="A basic web page containing some text from A Tale of Two Cities, a novel published in 1859 by English author Charles Dickens.">
     <meta name="robots" content="noindex">
+    <link rel="stylesheet" href="assets/css/style-1.css">
 </head>
 
 
@@ -26,5 +27,6 @@
     <p>A wonderful fact to reflect upon, that every human creature is constituted to be that profound secret and mystery to every other. A solemn consideration, when I enter a great city by night, that every one of those darkly clustered houses encloses its own secret; that every room in every one of them encloses its own secret; that every beating heart in the hundreds of thousands of breasts there, is, in some of its imaginings, a secret to the heart nearest it!</p>
     
     <p>by<i> Charles Dickens</i>, published by <b>Chapman and Hall</b> in 1859. </p> 
-    <p><a href="../index.html">Back to Home page</a></p> 
+    <p style="color: black;"><a href="../index.html" style="color: black;">Back to Home page</a></p>
+
 </body> </html>
