--- a/exercise/page-2.html
+++ b/exercise/page-2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0065)https://www.munnelly.com/frontend/lessons/assets/downloads/page-2 -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
+<html lang="en"><head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Purple Rain</title>
@@ -9,6 +9,7 @@
     <meta name="description" content="A basic web page containing some text from Wikipedia about the 1983-recorded song Purple Rain by Prince">
 <link type="text/css" rel="stylesheet" id="dark-mode-custom-link"><link type="text/css" rel="stylesheet" id="dark-mode-general-link"><style lang="en" type="text/css" id="dark-mode-custom-style"></style><style lang="en" type="text/css" id="dark-mode-native-style"></style><style lang="en" type="text/css" id="dark-mode-native-sheet"></style>
 <meta name="robots" content="noindex">
+<link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
