--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mary Smith | Home Page</title>
-<meta name="description" content="Welcome to my website that showcases some of my digital creations.">
+    <meta name="description" content="Welcome to my website that showcases some of my digital creations.">
+    <link rel="stylesheet" href="assets/css/global.css">
 </head>
 <body>
+    <img src="assets/img/Mr._Fresh.webp" alt="Mr.fresh">
     <main>
         <nav>  </nav>
     <header>
@@ -21,6 +23,10 @@
     <p><a href="exercise/page-1.html">A Tale of Two Cities</a></p>
     <p><a href="exercise/page-2.html">Purple rain</a></p>
     <p><a href="exercise/page-3.html">What is this?</a></p>
+    <p><a href="exercise/page-4.html">Vincent van Gogh</a></p> 
+    <p><a href="exercise/page-5.html">Irish Tourism</a></p> 
+    <p><a href="exercise/page-6.html">Smoothies</a></p> 
+    <p><a href="exercise/page-7.html">Software Analytics</a></p>
 <!-- Do not read this -->
     <footer>   </footer>
 </body>
