--- a/exercise/page-1.html
+++ b/exercise/page-1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A tale of Two Cities</title>
+    <title>A tale of Two Cities (Temuulen Batsaikhan (71617)</title>
     <meta name="description" content="A basic web page containing some text from A Tale of Two Cities, a novel published in 1859 by English author Charles Dickens.">
     <meta name="robots" content="noindex">
     <link rel="stylesheet" href="assets/css/style-1.css">
