--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mary Smith | Home Page</title>
+    <title>Temuulen Batsaikhan | 71617</title>
     <meta name="description" content="Welcome to my website that showcases some of my digital creations.">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon_io/apple-touch-icon.png">    
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon_io/favicon-32x32.png">    
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon_io/favicon-16x16.png">    
+    <link rel="manifest" href="assets/img/favicon/site.webmanifest">
     <link rel="stylesheet" href="assets/css/global.css">
 </head>
 <body>
@@ -27,6 +31,11 @@
     <p><a href="exercise/page-5.html">Irish Tourism</a></p> 
     <p><a href="exercise/page-6.html">Smoothies</a></p> 
     <p><a href="exercise/page-7.html">Software Analytics</a></p>
+    <p><a href="exercise/page-8.html">The Box Model</a></p>
+    <p><a href="exercise/page-9.html">Web page with panels</a></p>
+    <p><a href="exercise/page-10.html">Web page with fonts</a></p>
+    <p><a href="exercise/hero-video.html">Hero block with background video</a></p>
+    <p><a href="portfolio/fashion/index.html">a</a></p>
 <!-- Do not read this -->
     <footer>   </footer>
 </body>
