--- a/portfolio/fashion/index.html
+++ b/portfolio/fashion/index.html
@@ -156,7 +156,7 @@
 		</div>
 	</section>
 
-    <p><a href="/Documents/website/index">Back to Home page</a></p>
+    <p><a href="../../index.html">Back to Home page</a></p>
 
 	<!-- section starts here -->
 
@@ -210,7 +210,8 @@
 
 	<!-- section ends here -->
 
-
+    <div class="moving-object"></div> <!-- New moving object -->
+    <img src="c:\Users\Temka\Pictures\thumb-1920-1161222.jpg" alt="Moving Object" class="moving-object"> <!-- Image for animation -->
 
     </main>
 
