--- a/index.html
+++ b/index.html
@@ -8,35 +8,51 @@
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon_io/apple-touch-icon.png">    
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon_io/favicon-32x32.png">    
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon_io/favicon-16x16.png">    
-    <link rel="manifest" href="assets/img/favicon/site.webmanifest">
-    <link rel="stylesheet" href="assets/css/global.css">
+    <link rel="manifest" href="assets/img/favicon_io/site.webmanifest">
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Poppins:wght@300;600&display=swap" rel="stylesheet">
+    
+    <!-- External CSS -->
+    <link rel="stylesheet" href="exercise/assets/css/style-1.css">
 </head>
 <body>
-    <img src="assets/img/Mr._Fresh.webp" alt="Mr.fresh">
-    <main>
-        <nav>  </nav>
-    <header>
-    <h1> Hi, I am Web Designer Temuulen Batsaikhan </h1></header>
-    <section> </section>
-</main>
-    <h2> Web UI/Designer </h2>
-    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae dolorum qui vero nesciunt officiis, velit praesentium repellendus! Nihil assumenda odit veritatis optio et. Eius praesentium, ut dolor perferendis error nobis?</p>
-    <p> I created this website to showcase this buh</p>
-    <h3> Sample Web pages</h3>
+    <!-- Background Video -->
+    <video autoplay muted loop class="background-video">
+        <source src="exercise/assets/videos/Temka.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
 
-    <p><a href="exercise/page-1.html">A Tale of Two Cities</a></p>
-    <p><a href="exercise/page-2.html">Purple rain</a></p>
-    <p><a href="exercise/page-3.html">What is this?</a></p>
-    <p><a href="exercise/page-4.html">Vincent van Gogh</a></p> 
-    <p><a href="exercise/page-5.html">Irish Tourism</a></p> 
-    <p><a href="exercise/page-6.html">Smoothies</a></p> 
-    <p><a href="exercise/page-7.html">Software Analytics</a></p>
-    <p><a href="exercise/page-8.html">The Box Model</a></p>
-    <p><a href="exercise/page-9.html">Web page with panels</a></p>
-    <p><a href="exercise/page-10.html">Web page with fonts</a></p>
-    <p><a href="exercise/hero-video.html">Hero block with background video</a></p>
-    <p><a href="portfolio/fashion/index.html">a</a></p>
-<!-- Do not read this -->
-    <footer>   </footer>
+    <main>
+        <header>
+            <h1>Hi, I am Web Designer Temuulen Batsaikhan</h1>
+            <h2>Web UI/Designer</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae dolorum qui vero nesciunt officiis, velit praesentium repellendus!</p>
+            <p>I created this website to showcase some of my digital creations.</p>
+        </header>
+
+        <section id="portfolio">
+            <h3>Sample Web Pages</h3>
+            <ul>
+                <li><a href="exercise/page-1.html">A Tale of Two Cities</a></li>
+                <li><a href="exercise/page-2.html">Purple Rain</a></li>
+                <li><a href="exercise/page-3.html">What is this?</a></li>
+                <li><a href="exercise/page-4.html">Vincent van Gogh</a></li>
+                <li><a href="exercise/page-5.html">Irish Tourism</a></li>
+                <li><a href="exercise/page-6.html">Smoothies</a></li>
+                <li><a href="exercise/page-7.html">Software Analytics</a></li>
+                <li><a href="exercise/page-8.html">The Box Model</a></li>
+                <li><a href="exercise/page-9.html">Web page with panels</a></li>
+                <li><a href="exercise/page-10.html">Web page with fonts</a></li>
+                <li><a href="exercise/hero-video.html">Hero block with background video</a></li>
+                <li><a href="portfolio/fashion/index.html">Fashion Portfolio</a></li>
+            </ul>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2023 Temuulen Batsaikhan. All rights reserved.</p>
+        <p><a href="https://github.com/Temuulen-BCS">GitHub</a></p>
+    </footer>
 </body>
 </html>
