--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
     
     <!-- External CSS -->
     <link rel="stylesheet" href="exercise/assets/css/style-1.css">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SKSK5GM8TH"></script>
+    <script>
+     window.dataLayer = window.dataLayer || [];
+     function gtag(){dataLayer.push(arguments);}
+     gtag('js', new Date());
+
+    gtag('config', 'G-SKSK5GM8TH');
+    </script>
 </head>
 <body>
     <!-- Background Video -->
