--- a/contact/index.html
+++ b/contact/index.html
@@ -35,7 +35,7 @@
         
         <div class="nav-toggle" id="nav-toggle-btn"><div class="bar-1"></div><div class="bar-2"></div><div class="bar-3"></div></div>
             <ul class="links-wrapper">
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="../index.html"><i class="fa fa-home"></i></a></li>
                 <li><a href="../portfolio/index (1).html">Portfolio</a></li>
                 <li><a href="../store/store.htm">Store</a></li>
                 <li><a class="btn btn-solid btn-soft" id="btn-cta" href="#"><span>Contact</span> <i class="fa-regular fa-envelope"></i></a></li>
@@ -47,7 +47,7 @@
     <header class="theme-light text-center-mobile">
         <div class="container-text w-1140px">
             <h1>Get in touch</h1>
-            <h2>Have a project you would like to discuss? Let's make something great together! Email me at <a href="mailto:email@example.com?subject=Mail from my Personal Website">Temkacomputer@example.com</a> or use the form below to let me know a little more about your objectives and I'll get back to you.</h2>
+            <h2>Have a project you would like to discuss? Let's make something great together! Email me at <a href="mailto:email@example.com?subject=Mail from my Personal Website">Temkacomputer@gmail.com</a> or use the form below to let me know a little more about your objectives and I'll get back to you.</h2>
         </div>
         
     </header><!-- header ends here -->
