--- a/portfolio/project-hero/index-5.html
+++ b/portfolio/project-hero/index-5.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mary Smith | Portfolio | Sample Hero Block Layout 5</title>
+    <title>Temuulen Batsaikhan | Portfoli0 | Sample Hero Block Layout 5</title>
     <meta name="description" content="Gallery of hero block layouts.">
 
 	<!-- Preload large image -->
@@ -34,8 +34,8 @@
 
     <div class="col-2 col-text">
         
-        <h1>JENNIFER CHANG</h1>
-        <h2>UI DESIGNER</h2>
+        <div class="badge">JENNIFER CHANG</div>
+        <h2>UI DESIGN</h2>
         <p>Creating human-friendly interfaces for mobile and web apps.</p>
 
         <div class="container-btn">
