--- a/indexold.html
+++ b/indexold.html
@@ -43,7 +43,8 @@
             <ul class="links-wrapper">
                 <li><a href="index.html"><i class="fa-solid fa-backward"></i></a></li>
                 <li><a href="#"><i class="fa fa-home"></i></a></li>
-                <li><a href="portfolio/index.html">Portfolio</a></li>
+                <li><a href="portfolio/index.html">Web Design</a></li>
+                <li><a href="portfolio/js/index.html">JavaScript</a></li>
                 <li><a href="store/store.htm">Store</a></li>
                 <li><a class="btn btn-solid btn-soft" id="btn-cta" href="contact/index.html"><span>Contact</span> <i class="fa-regular fa-envelope"></i></a></li>
             </ul>
@@ -84,7 +85,7 @@
 
 		<div class="col-1 text-center w-820px">
 			<h2>Recent projects</h2>
-			<h3>Below you can see some examples of my recent work. Check out my complete portfolio of <a href="portfolio/index (1).html">web design</a> projects. Have a project you would like to discuss? <a href="contact/index.html">Let's make something great together!</a> </h3>
+			<h3>Below you can see some examples of my recent work. Check out my complete portfolio of <a href="portfolio/index (1).html">web design</a> and word JavaScript <a href="portfolio/js/index.html">here.</a> projects. Have a project you would like to discuss? <a href="contact/index.html">Let's make something great together!</a> </h3>
 		</div>
 
 		<!-- Begin three-column flexbox grid -->
@@ -138,7 +139,8 @@
 
 		<ul class="footer-links">
 			<li><a href="#">Home</a></li>
-			<li><a href="portfolio/index.html">Portfolio</a></li>
+			<li><a href="portfolio/index.html">WebDesign</a></li>
+            <li><a href="portfolio/js/index.html">JavaScript</a></li>
 			<li><a href="store/store.htm">Store</a></li>
             <li><a href="contact/index.html">Contact</a></li>
 		</ul>
