--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -39,7 +39,9 @@
     <header class="theme-light text-center-mobile">
         <div class="container-text w-1140px">
             <h1>Portfolio</h1>
-            <h2>Below you can see a selection of my web design and front-end development projects.</h2>
+            <h2>Below you can see a selection of my web design and front-end development projects.
+                My JavaScript project are <a href ="js/index.html">here</a>.</h2>
+
         </div>
     </header>
     
