--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -28,7 +28,8 @@
                 </div>
                 <ul class="links-wrapper">
                     <li><a href="../indexold.html"><i class="fa fa-home"></i></a></li>
-                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Web Design</a></li>
+                    <li><a href="../portfolio/js/index.html">JavaScript</a></li>
                     <li><a href="../store/store.htm">Store</a></li>
                     <li><a class="btn btn-solid btn-soft" id="btn-cta" href="../contact/index.html"><span>Contact</span> <i class="fa-regular fa-envelope"></i></a></li>
                 </ul>
@@ -111,6 +112,7 @@
         <ul class="footer-links">
             <li><a href="../indexold.html">Home</a></li>
             <li><a href="#">Portfolio</a></li>
+            <li><a href="../portfolio/js/index.html">JavaScript</a></li>
             <li><a href="../store/store.htm">Store</a></li>
             <li><a href="../contact/index.html">Contact</a></li>
         </ul>
