--- a/portfolio/js/calculator-modules/index.html
+++ b/portfolio/js/calculator-modules/index.html
@@ -191,16 +191,16 @@
 
 		<ul class="footer-links">
 			<li><a href="../index.html">Home</a></li>
-			<li><a href="../portfolio/index.html">Portfolio</a></li>
-			<li><a href="../contact/index.html">Contact</a></li>
+			<li><a href="../index.html">Portfolio</a></li>
+			<li><a href="../../../contact/index.html">Contact</a></li>
 		</ul>
 
 		<ul class="footer-icons">
 			<li><a href="https://www.linkedin.com/nnnnnnnnnnn" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-			<li><a href="https://github.com/nnnnnnnnnn" target="_blank"><i class="fab fa-github-square"></i></a></li>
+			<li><a href="https://github.com/Temuulen-BCS/temuulen-bcs.github.com" target="_blank"><i class="fab fa-github-square"></i></a></li>
 		</ul>
 
-		<p class="index.html"> <a href="../privacy.html" style="color: #fff; background-color:transparent;">Privacy &amp; Legal</a> </p>
+		<p class="index.html"> <a href="../../../privacy.html" style="color: #fff; background-color:transparent;">Privacy &amp; Legal</a> </p>
 
     </footer>
 
