--- a/portfolio/js/counter/index.html
+++ b/portfolio/js/counter/index.html
@@ -92,8 +92,8 @@
         <a href="../index.html"><img src="../assets/img/website-logo-sample.png" alt="website logo"></a>
         <ul class="">
             <li><a href="../index.html">Home</a></li>
-            <li><a href="../portfolio/index.html">Portfolio</a></li>
-            <li><a href="../contact/index.html" id="btn-cta"><span>Contact</span><i class="fas fa-arrow-right"></i></a></li>
+            <li><a href="../index.html">Portfolio</a></li>
+            <li><a href="../../../contact/index.html" id="btn-cta"><span>Contact</span><i class="fas fa-arrow-right"></i></a></li>
         </ul>
         <div class="item-icon">
             <div class="bar1"></div>
@@ -172,16 +172,16 @@
 
 		<ul class="footer-links">
 			<li><a href="../index.html">Home</a></li>
-			<li><a href="../portfolio/index.html">Portfolio</a></li>
-			<li><a href="../contact/index.html">Contact</a></li>
+			<li><a href="../index.html">Portfolio</a></li>
+			<li><a href="../../../contact/index.html">Contact</a></li>
 		</ul>
 
 		<ul class="footer-icons">
 			<li><a href="https://www.linkedin.com/nnnnnnnnnnn" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-			<li><a href="https://github.com/nnnnnnnnnn" target="_blank"><i class="fab fa-github-square"></i></a></li>
+			<li><a href="https://github.com/Temuulen-BCS/temuulen-bcs.github.com" target="_blank"><i class="fab fa-github-square"></i></a></li>
 		</ul>
 
-		<p class="index.html"> <a href="../privacy.html" style="color: #fff; background-color:transparent;">Privacy &amp; Legal</a> </p>
+		<p class="index.html"> <a href="../../../privacy.html" style="color: #fff; background-color:transparent;">Privacy &amp; Legal</a> </p>
 
     </footer>
 
