--- a/portfolio/js/weather/index.html
+++ b/portfolio/js/weather/index.html
@@ -67,6 +67,25 @@
         }
 
 
+        #btn-cta {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            gap: 8px;
+            padding: 10px 20px;
+            background-image: linear-gradient(to right,#e052a0,#f15c41);
+            color: #fff;
+            font-weight: 600;
+            border-radius: 12px;
+            text-decoration: none;
+            transition: background-color 0.3s ease, filter 0.3s ease;
+            border: none;
+        }
+
+        #btn-cta:hover {
+            filter: brightness(140%) saturate(140%);
+        }
+
     </style>
 
 	<!-- Font Awesome 6.1 icons -->
@@ -83,8 +102,8 @@
         <a href="../index.html"><img src="../assets/img/website-logo-sample.png" alt="website logo"></a>
         <ul class="">
             <li><a href="../index.html">Home</a></li>
-            <li><a href="../portfolio/index.html">Portfolio</a></li>
-            <li><a href="../contact/index.html" id="btn-cta"><span>Contact</span><i class="fas fa-arrow-right"></i></a></li>
+            <li><a href="../index.html">Portfolio</a></li>
+            <li><a href="../../../contact/index.html" id="btn-cta"><span>Contact</span><i class="fas fa-arrow-right"></i></a></li>
         </ul>
         <div class="item-icon">
             <div class="bar1"></div>
@@ -136,16 +155,18 @@
 
 		<ul class="footer-links">
 			<li><a href="../index.html">Home</a></li>
-			<li><a href="../portfolio/index.html">Portfolio</a></li>
-			<li><a href="../contact/index.html">Contact</a></li>
+			<li><a href="../index.html">Portfolio</a></li>
+			<li><a href="../../../contact/index.html">Contact</a></li>
 		</ul>
 
 		<ul class="footer-icons">
 			<li><a href="https://www.linkedin.com/nnnnnnnnnnn" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-			<li><a href="https://github.com/nnnnnnnnnn" target="_blank"><i class="fab fa-github-square"></i></a></li>
+			<li><a href="https://github.com/Temuulen-BCS/temuulen-bcs.github.com" target="_blank"><i class="fab fa-github-square"></i></a></li>
 		</ul>
 
-		<p class="index.html"> <a href="../" style="color: #fff; background-color:transparent;">Privacy &amp; Legal</a> </p>
+		<p class="index.html"> <a href="../../../privacy.html" style="color: #fff; background-color:transparent;">Privacy &amp; Legal</a> </p>
+
+        
 
     </footer>
 
